kube/deploy/core/ingress/cloudflare/tunnel/hr.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${DNS_SHORT_CF}
    external-dns.alpha.kubernetes.io/target: ${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: cloudflared-external-dns-short
  namespace: cloudflare
spec:
  type: ExternalName
  externalName: ${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${DNS_MAIN_CF}
    external-dns.alpha.kubernetes.io/target: ${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: cloudflared-external-dns-long
  namespace: cloudflare
spec:
  type: ExternalName
  externalName: ${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
