kube/deploy/core/ingress/cloudflare/tunnel/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel
  namespace: &app cloudflare
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudflared
      app.kubernetes.io/name: cloudflared
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: "monitoring"
            prometheus: "kps"
  egress:
    # ingress controller
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "10443"
              protocol: TCP
            - port: "10443"
              protocol: UDP
    # allow cloudflared to egress to pods that require ingress
    - toEndpoints:
        - matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
            - key: ingress.home.arpa/cloudflare
              operator: In
              values: [allow]
    # GoToSocial
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: &gts gotosocial
            app.kubernetes.io/instance: *gts
            app.kubernetes.io/name: *gts
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8080"
              protocol: UDP
    # allow egress to connect to Cloudflare network
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
    # allow Flux notification-controller ingress
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
            app: notification-controller
      toPorts:
        - ports:
            - port: "9292"
              protocol: TCP
            - port: "80"
              protocol: TCP
          rules:
            http:
              - {}
    # allow Flux notification-controller ingress
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "59292"
              protocol: TCP
          rules:
            http:
              - {}
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ingress-to-cloudflare-tunnel"
spec:
  description: "Allow pods that require ingress to allow traffic from cloudflare-tunnel, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/cloudflare: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare
            app.kubernetes.io/instance: cloudflared
            app.kubernetes.io/name: cloudflared
